# ising-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_cmake.sh
include/: ising.hpp  ising_impl.hpp  ising_utils.hpp
python/: ising_impl.pxd  ising_impl.pyx  setup.py
source/: CMakeLists.txt  ising_impl.cpp
test/: CMakeLists.txt  ising_impl_benchmark.cpp  ising_impl_test.cpp  ising_impl_test.hpp  ising_impl_test_main.cpp  ising_impl_test_observable.cpp
